--- a/index.html
+++ b/index.html
@@ -2,26 +2,28 @@
 <html>
 <head>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/scripts.js"type="text/javascript">
+
+  </script>
 
   <meta charset="utf-8">
   <title>ConnectFour</title>
 </head>
 <body>
-  <div class   ="container">
+  <!-- <div class   ="container"> -->
     <div class ="jumbotron jumbotron-fluid">
-      <h1>Connect 4our</h1>
+      <h1>Connect Four</h1>
     </div>
     <div class ="row">
-      <canvas id="canvas" width="700" height="800"></canvas>
+      <canvas id="canvas" width="800" height="900"></canvas>
 
 
     </div>
   </div>
 
-</div>
+<!-- </div> -->
 
 </body>
 </html>
